# yabs

./: .clang-format  .coveralls.yml  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  Cargo.toml  INSTALL  LICENSE  Makefile  README.md  build.rs  projects.md  yabs.pro  yabs.toml  yabs.ybf
distrib/: build-package.sh
distrib/arch/yabs-git/: PKGBUILD
distrib/fed/: yabs.spec
doc/: yabs.1  yabs.1.txt
examples/multiple_bin/: multiple_bin.toml
examples/multiple_bin/src/c/: main.c
examples/multiple_bin/src/cpp/: main.cpp
examples/static_lib/: static_lib.toml
examples/test_lib_src/: test.cpp  test.h
examples/use_static_lib/: use_static_lib.toml
examples/use_static_lib/src/: main.cpp
include/: colors.h  decoder.h  dist.h  env.h  gen.h  interface.h  parser.h  platdef.h  profile.h  profile_tree.h  remote.h  yabs.h
lib/: build.rs  desc.rs  error.rs  ext.rs  lib.rs  logger.rs  new.rs  profile.in.rs  profile.rs
lib/desc/: desc.rs  doc.in.rs  doc.rs  install.in.rs  install.rs  mod.rs  project.in.rs  project.rs
src/: cli.yaml  decoder.cpp  dist.cpp  env.cpp  gen.cpp  gen.rs  interface.cpp  main.rs  parser.cpp  profile.cpp  profile.rs  profile_tree.cpp  remote.cpp  yabs.cpp
test/: test-script.sh  yabs.yml
test/proj-test/: hello-yabs.c  proj-test.ybf
test/test_project/: main_c.c  main_cpp.cpp  test.toml  test_project.toml
test/yml/: ball_clubs.yml  ball_players.yml  bool.yml  complex_key.yml  quoted_scalar.yml  yabs-include.yml  yabs.yml
