[package]
name = "yabs"
version = "0.1.2"
authors = ["Alberto Corona <ac@albertocorona.com>>"]
keywords = ["system", "build", "make"]
description = "Yet another build system"
repository = "https://github.com/0X1A/yabs"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
walkdir = "1"
ansi_term = "0.9"

[dependencies.toml]
version = "0.2"
features = ["serde"]
default-features = false

[dependencies.clap]
version = "2"
features = ["yaml", "color"]

[lib]
name = "util"
path = "lib/lib.rs"

[[bin]]
name = "yabs"
path = "src/main.rs"
test = false
